--- a/index.html
+++ b/index.html
@@ -101,3 +101,17 @@
 </body>
   </html>
                                  
+<nav class="main-nav">
+    <div class="nav-container">
+        <div class="logo">SHOE<span>STORE</span></div>
+        <ul class="nav-links">
+            <li><a href="index.html">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Kids</a></li>
+            <li><a href="login.html" class="login-link">Sign In</a></li>
+        </ul>
+        <div class="nav-icons" onclick="scrollToCheckout()">
+             <strong>Bag (<span id="cart-count">0</span>)</strong>
+        </div>
+    </div>
+</nav>
