Update admin email for authentication

--- a/admin.html
+++ b/admin.html
@@ -65,7 +65,7 @@ import {
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-const ADMIN_EMAIL = "youradmin@gmail.com";
+const ADMIN_EMAIL = "vd1422961@gmail.com";
 
 // Protect admin page
 onAuthStateChanged(auth, user => {
