--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Premium shoes collection - Find your perfect pair of shoes from our curated collection">
     <meta name="keywords" content="shoes, sneakers, footwear, online shoe store">
     <title>ShoeHub - Premium Footwear Collection</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
