--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
     <title>Admin Dashboard - ShoeHub</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="admin.css">
+    <script src="admin.js"></script>
 </head>
 <body class="admin-page">
     <!-- Admin Navigation -->
